--- a/content/themes/default/Assets/css/style.css
+++ b/content/themes/default/Assets/css/style.css
@@ -26,6 +26,18 @@
     font-size: 64px; 
     width: 550px;
     color: #ffffff;
+    position: relative;
+}
+
+.dashboard_wrap_name::before {
+    content: '';
+    position: absolute;
+    background: #ffffff;
+    height: 2px; 
+    width: 50px; 
+    left: 50%;
+    transform: translate(-50%);
+    bottom: -15px;
 }
 
 .dashboard
@@ -54,7 +66,8 @@
 
 .background-flex::before 
 {
-    position: absolute;
+    position: fixed;
+    z-index: 99;
     bottom: 0; 
     right: 0;
     content: '';
@@ -67,12 +80,13 @@
 
 .background-flex::after
 {
-    position: absolute;
+    position: fixed;
     bottom: 0; 
     right: 0;
     content: '';
     border-radius: 50%;
     width: 150px;
+    z-index: 999;
     height: 150px;
     background: #f4bf06;
     transform: translate(75px, 75px);
@@ -87,11 +101,97 @@
     border: none; 
     border-radius: 35px; 
     font-size: 24px;
-    
-    font-family: 'Montserrat Alternates';
+    box-shadow: 0px 0px 5px #2c3e50;
+    /*font-family: 'Montserrat Alternates';*/
     text-transform: uppercase;
 }
 
-.dashboard_wrap_title_button {
+.dashboard_wrap_title
+{
     text-align: center;
+}
+
+.navbar_wrap_ul 
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.navbar_wrap_link
+{
+    margin: 0 15px;
+    z-index: 99;
+    position: relative;
+    text-decoration: none;
+    color: #ffffff; 
+    
+    font-family: 'Montserrat Alternates';
+    font-size: 24px;
+}
+
+.navbar_wrap_li:nth-child(n+2)::before
+{
+    content: '';
+    position: absolute; 
+    width: 1px; 
+    height: 100%; 
+    background: #ecf0f1;
+    left: 0;
+    z-index: 99;
+}
+
+.navbar_wrap_li 
+{
+    position: relative;
+}
+
+.navbar_wrap_link:hover::before
+{
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 1px;
+    background: #ffffff;
+    bottom: -5px;
+}
+
+.navbar_wrap 
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.wave-header 
+{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 1440px;
+    height: 320px;
+    z-index: -1;
+    /*transform: rotate(180deg);*/
+    
+}
+
+.wave-bottom 
+{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 1440px;
+    height: 320px;
+    z-index: -1;
+    /*transform: rotate(180deg);*/
+}
+
+.navbar_wrap_title 
+{
+    color: #ecf0f1;
+    font-size: 32px;
+    font-family: 'Montserrat Alternates';
 }
